update swagger API documentation
