# internal/controller/user/http.go
@@ -29,11 +29,13 @@ func NewUserHttp(ctx context.Context, userUsecase user.UserUsecase) UserControll
 }
 
 // @Summary Register a new user account
+// @Tags Users
 // @Accept json
 // @Produce json
 // @Param user body domain.UserRegister true "User Data"
 // @Success 201 {object} domain.UserRegisterResponse
 // @Failure 400 {object} middleware.Error
+// @Failure 500 {object} middleware.Error
 // @Router /users/register [post]
 func (u userHttp) PostUserRegister(ctx *gin.Context) {
 	var bindUser domain.UserRegister
@@ -62,11 +64,13 @@ func (u userHttp) PostUserRegister(ctx *gin.Context) {
 }
 
 // @Summary Login with existing user account
+// @Tags Users
 // @Accept  json
 // @Produce  json
 // @Param user body domain.UserLogin true "User Data"
 // @Success 200 {object} domain.UserLoginResponse
 // @Failure 400 {object} middleware.Error
+// @Failure 500 {object} middleware.Error
 // @Router /users/login [post]
 func (u userHttp) PostUserLogin(ctx *gin.Context) {
 	var bindUser domain.UserLogin
@@ -94,6 +98,7 @@ func (u userHttp) PostUserLogin(ctx *gin.Context) {
 }
 
 // @Summary Update user account data
+// @Tags Users
 // @Accept  json
 // @Produce  json
 // @Param Authorization header string true "Access Token"
@@ -101,6 +106,7 @@ func (u userHttp) PostUserLogin(ctx *gin.Context) {
 // @Success 200 {object} domain.UserUpdateDataResponse
 // @Failure 400 {object} middleware.Error
 // @Failure 401 {object} middleware.Error
+// @Failure 500 {object} middleware.Error
 // @Router /users [put]
 func (u userHttp) PutUserUpdateData(ctx *gin.Context) {
 	userId := ctx.MustGet("userId").(uint)
@@ -130,9 +136,12 @@ func (u userHttp) PutUserUpdateData(ctx *gin.Context) {
 }
 
 // @Summary Delete existing user account
+// @Tags Users
 // @Produce  json
+// @Param Authorization header string true "Access Token"
 // @Success 200 {object} domain.UserDeleteResponse
 // @Failure 401 {object} middleware.Error
+// @Failure 500 {object} middleware.Error
 // @Router /users [delete]
 func (u userHttp) DeleteUser(ctx *gin.Context) {
 	userId := ctx.MustGet("userId").(uint)
